--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.7",
+    "firebase": "^7.16.1",
     "gatsby": "^2.23.12",
     "gatsby-firesource": "^2.0.3",
     "gatsby-image": "^2.4.9",
